--- a/src/app/dashboard/dashboard.less
+++ b/src/app/dashboard/dashboard.less
@@ -257,15 +257,10 @@
               font-size: 0.85rem;
               color: #7f8c8d;
 
-              .activity-domain {
-                &:before {
-                  content: '<â ';
-                }
-              }
 
               .activity-date {
                 &:before {
-                  content: '=Å ';
+                  content: '=ï¿½ ';
                 }
               }
             }
