--- a/src/app/my-account/my-account.html
+++ b/src/app/my-account/my-account.html
@@ -215,7 +215,7 @@
                       </div>
                       <div class="document-type-details">
                         <h4>{{ docType.name }}</h4>
-                        <p>{{ docType.description }}</p>
+                        <p>{{ docType.definition }}</p>
                         @if (docType.category) {
                           <span class="document-type-category">{{ docType.category }}</span>
                         }
