--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -25,15 +25,15 @@
           </a>
         </li>
         <li>
-          <a routerLink="/domains" routerLinkActive="active" (click)="onNavigationClick()">
-            <i class="icon">🌐</i>
-            Domains
-          </a>
-        </li>
-        <li>
           <a routerLink="/document-types" routerLinkActive="active" (click)="onNavigationClick()">
             <i class="icon">📄</i>
             Document Types
+          </a>
+        </li>
+        <li>
+          <a routerLink="/workflows" routerLinkActive="active" (click)="onNavigationClick()">
+            <i class="icon">⚡</i>
+            Workflows
           </a>
         </li>
       }
