--- a/src/app/workflows/workflows.less
+++ b/src/app/workflows/workflows.less
@@ -688,6 +688,11 @@
                 color: @primary-color;
                 font-weight: @font-weight-semi;
               }
+
+              .doc-type-count {
+                color: #9b59b6;
+                font-weight: @font-weight-semi;
+              }
             }
           }
         }
@@ -887,6 +892,11 @@
 
           .rule-count {
             color: @primary-color;
+            font-weight: @font-weight-semi;
+          }
+
+          .doc-type-count {
+            color: #9b59b6;
             font-weight: @font-weight-semi;
           }
 
